# witch-farm-autoclicker

./: .gitignore  README.md  autoclicker.py  build_exe.bat  build_release.bat  generate_witch_icon.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: changelog.json  index.html  site.js  styles.css
docs/downloads/: WitchFarmAutoClickerSetup_latest.exe.sha256  WitchFarmAutoClicker_latest.exe.sha256
installers/: WitchFarmAutoClicker.iss
scripts/: install_exe.bat  install_source.bat  run_source.bat
src/witchfarm_autoclicker/: clicker.py  config.py  logging_setup.py  main.py  paths.py  ui.py
src/witchfarm_autoclicker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_clicker_vectors.py  test_config_manager.py
